--- a/munki-repo.conf
+++ b/munki-repo.conf
@@ -2,7 +2,7 @@
 server {
   listen 80;
   server_name munki;
-  root /webroot/;
+  root /munki_repo/;
   index index.php index.html index.htm;
   autoindex off;
 
